[package]
name = "guapa-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6"
dotenv = "0.15"
serenity = "0.12"
tokio =  { version = "1.44.2", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features  = ["derive"] }
serde_json = "1.0"